--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "mobile",
     "number"
   ],
-  "author": "Chetankumar Varma <varmachets1@gmail.com>",
+  "author": "Chetankumar Varma",
   "license": "ISC"
 }
